fix: css text search too long

--- a/src/containers/Search/Filter/Filter.module.scss
+++ b/src/containers/Search/Filter/Filter.module.scss
@@ -31,7 +31,12 @@
       cursor: pointer;
     }
   }
+
   &_title {
-    margin: 5.8rem 0 3rem 0;
+    margin: 5.8rem 0 3rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+    white-space: nowrap;
   }
 }
